chore: use new variable